--- a/examples/Geospatial-Recommendation-System/geospatial-recommendation.ipynb
+++ b/examples/Geospatial-Recommendation-System/geospatial-recommendation.ipynb
@@ -4,6 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Geospatial Recommendation System\n",
+    "\n",
+    "![image-for-the-concept](../Geospatial-Recommendation-System/Geospatial%20Recommendation%20System.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this tutorial, we'll enhance our restaurant recommendation system using Full Text Search (FTS) Indexes and Geospatial APIs.\n",
+    "\n",
+    "1. Extract User Preferences: Identify key details from user input such as preferred cuisines and location.\n",
+    "2. Construct Query String: Synthesize these details into a structured query string for searching.\n",
+    "3. Perform FTS Index Search: Use the query string to find relevant restaurant recommendations.\n",
+    "4. Apply Geospatial Filtering: Use a Geospatial API to locate the user and refine recommendations based on proximity.\n",
+    "\n",
+    "We can enhance later on by adding a filter to sort the recommendations based on distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Importing the relevant libraires"
    ]
   },
@@ -140,7 +163,6 @@
    "source": [
     "import lancedb\n",
     "import pandas as pd\n",
-    "from sentence_transformers import SentenceTransformer\n",
     "\n",
     "restaurant_data = pd.read_csv(\"data.csv\")\n",
     "restaurant_data = restaurant_data[restaurant_data.columns[1:]]\n",
@@ -157,11 +179,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will extract key information from the restaurant dataset columns and create a query string. This string will be encoded using our embedding model and then combined with additional data for storage in the Vector Database."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sentence_transformers import SentenceTransformer\n",
+    "\n",
     "model = SentenceTransformer('paraphrase-MiniLM-L6-v2')\n",
     "data_points_vectors = []\n",
     "\n",
@@ -376,6 +407,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query Transformation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 179,
    "metadata": {},
@@ -399,7 +437,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extracting the specifics from the query "
+    "### Extracting the specifics from the query \n",
+    "\n",
+    "Just like we pulled out the key details from our CSV to craft query strings, we’ll do the same with user queries. This step is important because it makes searching for the right recommendations much smoother. I mean doing so we can easily run the FTS Index Search. "
    ]
   },
   {
@@ -447,13 +487,6 @@
     "# Extract the generated text\n",
     "content = completion.choices[0].message.content\n",
     "print(content)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Addding the response dictionary to the response."
    ]
   },
   {
@@ -509,7 +542,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### GeoSpatial Recommendation"
+    "### GeoSpatial Recommendation\n",
+    "\n",
+    "Ok now we will use the Google Geospatial API to pinpoint the exact locations of restaurants and find their coordinates. The next step is to calculate the distance between these restaurants and the user's location. For this, I am going to use the Haversine formula, which uses the coordinates of two points to draw an imaginary straight line between them, measuring the distance across the Earth's surface. There's some math behind how this formula works, but we'll keep things simple and focus on its application for now.  "
    ]
   },
   {
