--- a/tutorials/GraphRAG_with_cognee/cognee_multimedia_demo.ipynb
+++ b/tutorials/GraphRAG_with_cognee/cognee_multimedia_demo.ipynb
@@ -292,8 +292,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mp3_file_path = '/content/text_to_speech.mp3'\n",
-    "png_file_path = '/content/example.png'"
+    "mp3_file_path = \"/content/text_to_speech.mp3\"\n",
+    "png_file_path = \"/content/example.png\""
    ]
   },
   {
@@ -314,10 +314,10 @@
     "import os\n",
     "\n",
     "# Setting environment variables\n",
-    "if \"GRAPHISTRY_USERNAME\" not in os.environ: \n",
+    "if \"GRAPHISTRY_USERNAME\" not in os.environ:\n",
     "    os.environ[\"GRAPHISTRY_USERNAME\"] = \"\"\n",
     "\n",
-    "if \"GRAPHISTRY_PASSWORD\" not in os.environ: \n",
+    "if \"GRAPHISTRY_PASSWORD\" not in os.environ:\n",
     "    os.environ[\"GRAPHISTRY_PASSWORD\"] = \"\"\n",
     "\n",
     "if \"LLM_API_KEY\" not in os.environ:\n",
@@ -325,23 +325,23 @@
     "\n",
     "\n",
     "# \"neo4j\" or \"networkx\"\n",
-    "os.environ[\"GRAPH_DATABASE_PROVIDER\"]=\"networkx\" \n",
+    "os.environ[\"GRAPH_DATABASE_PROVIDER\"] = \"networkx\"\n",
     "# Not needed if using networkx\n",
-    "#os.environ[\"GRAPH_DATABASE_URL\"]=\"\"\n",
-    "#os.environ[\"GRAPH_DATABASE_USERNAME\"]=\"\"\n",
-    "#os.environ[\"GRAPH_DATABASE_PASSWORD\"]=\"\"\n",
+    "# os.environ[\"GRAPH_DATABASE_URL\"]=\"\"\n",
+    "# os.environ[\"GRAPH_DATABASE_USERNAME\"]=\"\"\n",
+    "# os.environ[\"GRAPH_DATABASE_PASSWORD\"]=\"\"\n",
     "\n",
     "# \"pgvector\", \"qdrant\", \"weaviate\" or \"lancedb\"\n",
-    "os.environ[\"VECTOR_DB_PROVIDER\"]=\"lancedb\" \n",
+    "os.environ[\"VECTOR_DB_PROVIDER\"] = \"lancedb\"\n",
     "# Not needed if using \"lancedb\" or \"pgvector\"\n",
     "# os.environ[\"VECTOR_DB_URL\"]=\"\"\n",
     "# os.environ[\"VECTOR_DB_KEY\"]=\"\"\n",
     "\n",
     "# Relational Database provider \"sqlite\" or \"postgres\"\n",
-    "os.environ[\"DB_PROVIDER\"]=\"sqlite\"\n",
+    "os.environ[\"DB_PROVIDER\"] = \"sqlite\"\n",
     "\n",
     "# Database name\n",
-    "os.environ[\"DB_NAME\"]=\"cognee_db\"\n",
+    "os.environ[\"DB_NAME\"] = \"cognee_db\"\n",
     "\n",
     "# Postgres specific parameters (Only if Postgres or PGVector is used)\n",
     "# os.environ[\"DB_HOST\"]=\"127.0.0.1\"\n",
@@ -451,7 +451,9 @@
     "from cognee.infrastructure.databases.graph import get_graph_engine\n",
     "import graphistry\n",
     "\n",
-    "graphistry.login(username=os.getenv(\"GRAPHISTRY_USERNAME\"), password=os.getenv(\"GRAPHISTRY_PASSWORD\"))\n",
+    "graphistry.login(\n",
+    "    username=os.getenv(\"GRAPHISTRY_USERNAME\"), password=os.getenv(\"GRAPHISTRY_PASSWORD\")\n",
+    ")\n",
     "\n",
     "graph_engine = await get_graph_engine()\n",
     "\n",
