fix scratch tutorial

--- a/tutorials/RAG-from-Scratch/RAG_from_Scratch.ipynb
+++ b/tutorials/RAG-from-Scratch/RAG_from_Scratch.ipynb
@@ -431,7 +431,7 @@
     "# Embed all the chunks of text\n",
     "embeds = []\n",
     "for chunk in chunks:\n",
-    "    embed = embedder(chunks)\n",
+    "    embed = embedder(chunk)\n",
     "    embeds.append(embed)"
    ]
   },
