--- a/examples/customer_support_agent_langgraph/LangGraph_LanceDB.ipynb
+++ b/examples/customer_support_agent_langgraph/LangGraph_LanceDB.ipynb
@@ -179,7 +179,9 @@
     "import torch\n",
     "\n",
     "# llm = ChatOpenAI(model=\"gpt-3.5-turbo\")\n",
-    "memory = MemorySaver() # it'll save the all the states and history corresponding to a `thread_id`. We can get previous conversations if we use memory\n",
+    "memory = (\n",
+    "    MemorySaver()\n",
+    ")  # it'll save the all the states and history corresponding to a `thread_id`. We can get previous conversations if we use memory\n",
     "\n",
     "# ------------ Vector Search ----------------\n",
     "!rm -rf \"./lancedb\"\n",
@@ -191,7 +193,15 @@
     "from langchain_core.tools import tool\n",
     "\n",
     "# ------- Vector DB using LanceDB ------------\n",
-    "model = get_registry().get(\"sentence-transformers\").create(name=\"BAAI/bge-small-en-v1.5\", device=\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = (\n",
+    "    get_registry()\n",
+    "    .get(\"sentence-transformers\")\n",
+    "    .create(\n",
+    "        name=\"BAAI/bge-small-en-v1.5\",\n",
+    "        device=\"cuda\" if torch.cuda.is_available() else \"cpu\",\n",
+    "    )\n",
+    ")\n",
+    "\n",
     "\n",
     "class Policy(LanceModel):\n",
     "    text: str = model.SourceField()\n",
@@ -206,14 +216,24 @@
     "\n",
     "\n",
     "class VectorStoreRetriever:\n",
-    "    def __init__(self, db_path:str, table_name:str, model, docs: list, schema, ):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        db_path: str,\n",
+    "        table_name: str,\n",
+    "        model,\n",
+    "        docs: list,\n",
+    "        schema,\n",
+    "    ):\n",
     "        self.db = lancedb.connect(db_path)\n",
-    "        self.table = self.db.create_table(table_name, schema = schema)\n",
+    "        self.table = self.db.create_table(table_name, schema=schema)\n",
     "        self.table.add([{\"text\": txt} for txt in re.split(r\"(?=\\n##)\", faq_text)])\n",
     "\n",
     "    def query(self, query: str, k: int = 5) -> list[dict]:\n",
     "        result = self.table.search(query).limit(k).to_list()\n",
-    "        return [{\"page_content\": item[\"text\"], \"similarity\": 1- item[\"_distance\"]} for item in result]\n",
+    "        return [\n",
+    "            {\"page_content\": item[\"text\"], \"similarity\": 1 - item[\"_distance\"]}\n",
+    "            for item in result\n",
+    "        ]\n",
     "\n",
     "\n",
     "retriever = VectorStoreRetriever(\"./lancedb\", \"company_policy\", model, faq_text, Policy)"
@@ -318,7 +338,9 @@
     "import os\n",
     "from colorama import Fore, Style\n",
     "\n",
-    "memory = MemorySaver() # it'll save the all the states and history corresponding to a `thread_id`. We can get previous conversations if we use memory\n",
+    "memory = (\n",
+    "    MemorySaver()\n",
+    ")  # it'll save the all the states and history corresponding to a `thread_id`. We can get previous conversations if we use memory\n",
     "\n",
     "\n",
     "class Email(BaseModel):\n",
@@ -330,6 +352,7 @@
     "    status: str = \"pending\"  # pending, sent, failed, skipped\n",
     "    failure_reason: str = \"\"\n",
     "\n",
+    "\n",
     "class EmailState(BaseModel):\n",
     "    emails: List[Email] = []\n",
     "    processed_emails: List[Email] = []\n",
@@ -339,92 +362,126 @@
     "    trials: int = 0\n",
     "    allowed_trials: int = 3\n",
     "    sendable: bool = False\n",
-    "    exit:bool = False\n",
+    "    exit: bool = False\n",
     "\n",
     "\n",
     "def create_dummy_random_emails():\n",
     "    items = [\n",
     "        {\n",
     "            \"subject\": \"Invoice Request for Recent Flight Booking\",\n",
-    "            \"body\": \"Hey SWISS Team, I recently booked a flight with you (Booking Reference: LX123456) and need an invoice for my records. Could you let me know how to get it? Thanks! Anna Müller\"\n",
+    "            \"body\": \"Hey SWISS Team, I recently booked a flight with you (Booking Reference: LX123456) and need an invoice for my records. Could you let me know how to get it? Thanks! Anna Müller\",\n",
     "        },\n",
     "        {\n",
     "            \"subject\": \"Rebooking Inquiry for Upcoming Flight\",\n",
-    "            \"body\": \"Hi there, I need to change the dates for my flight (Booking Reference: LX789012). Can you let me know if this is possible and what fees I might have to pay? Cheers, John Smith\"\n",
+    "            \"body\": \"Hi there, I need to change the dates for my flight (Booking Reference: LX789012). Can you let me know if this is possible and what fees I might have to pay? Cheers, John Smith\",\n",
     "        },\n",
     "        {\n",
     "            \"subject\": \"Cancellation of Flight LX345678\",\n",
-    "            \"body\": \"Hi SWISS, I need to cancel my flight (Booking Reference: LX345678) because of some unexpected changes. Can you walk me through the cancellation process and any fees? Thanks, Maria Gonzalez\"\n",
+    "            \"body\": \"Hi SWISS, I need to cancel my flight (Booking Reference: LX345678) because of some unexpected changes. Can you walk me through the cancellation process and any fees? Thanks, Maria Gonzalez\",\n",
     "        },\n",
     "        {\n",
     "            \"subject\": \"Request for Special Invoice for Italy\",\n",
-    "            \"body\": \"Hi SWISS, I booked a flight from Italy and need a special invoice for tax reasons. Can you help me out with this? Thanks, Luca Rossi\"\n",
+    "            \"body\": \"Hi SWISS, I booked a flight from Italy and need a special invoice for tax reasons. Can you help me out with this? Thanks, Luca Rossi\",\n",
     "        },\n",
     "        {\n",
     "            \"subject\": \"Payment Issue with Credit Card\",\n",
-    "            \"body\": \"Hey, I tried paying for my booking with my Visa card, but it didn’t go through. Can you check if it’s an issue with my card or your system? Thanks, Emily Brown\"\n",
+    "            \"body\": \"Hey, I tried paying for my booking with my Visa card, but it didn’t go through. Can you check if it’s an issue with my card or your system? Thanks, Emily Brown\",\n",
     "        },\n",
     "        {\n",
     "            \"subject\": \"Refund Status for Cancelled Flight\",\n",
-    "            \"body\": \"Hi SWISS, I cancelled my flight (Booking Reference: LX456789) a couple of weeks ago and was told I’d get a refund. Any updates on that? Thanks, David Johnson\"\n",
+    "            \"body\": \"Hi SWISS, I cancelled my flight (Booking Reference: LX456789) a couple of weeks ago and was told I’d get a refund. Any updates on that? Thanks, David Johnson\",\n",
     "        },\n",
     "        {\n",
     "            \"subject\": \"Seat Reservation Inquiry\",\n",
-    "            \"body\": \"Hey, I have a booking (Reference: LX567890) and wanted to check if my seat reservation will stay the same after a rebooking. Let me know! Sophie Lee\"\n",
+    "            \"body\": \"Hey, I have a booking (Reference: LX567890) and wanted to check if my seat reservation will stay the same after a rebooking. Let me know! Sophie Lee\",\n",
     "        },\n",
     "        {\n",
     "            \"subject\": \"Upgrade Request for Economy Flex Fare\",\n",
-    "            \"body\": \"Hi SWISS, I booked an Economy Flex fare and was wondering if I can upgrade to Business Class. Can you let me know how to do that? Thanks, Michael Chen\"\n",
+    "            \"body\": \"Hi SWISS, I booked an Economy Flex fare and was wondering if I can upgrade to Business Class. Can you let me know how to do that? Thanks, Michael Chen\",\n",
     "        },\n",
     "        {\n",
     "            \"subject\": \"Group Booking Inquiry\",\n",
-    "            \"body\": \"Hi, I’m looking to book flights for a group of 12 people. Can you give me some info on group booking options and any discounts? Thanks, Sarah Wilson\"\n",
+    "            \"body\": \"Hi, I’m looking to book flights for a group of 12 people. Can you give me some info on group booking options and any discounts? Thanks, Sarah Wilson\",\n",
     "        },\n",
     "        {\n",
     "            \"subject\": \"Issue with Online Booking Platform\",\n",
-    "            \"body\": \"Hey SWISS, I can’t see my recent booking in my profile on your website. Can you help me fix this? Thanks, Thomas Anderson\"\n",
-    "        }\n",
+    "            \"body\": \"Hey SWISS, I can’t see my recent booking in my profile on your website. Can you help me fix this? Thanks, Thomas Anderson\",\n",
+    "        },\n",
     "    ]\n",
-    "    chosen_items = [random.choice(items) for _ in range(random.randint(0,2))]\n",
-    "    return [Email(id=str(i), sender=\"some_user@example.mail\", subject=item[\"subject\"], body=item[\"body\"]) for i, item in enumerate(chosen_items)]\n",
+    "    chosen_items = [random.choice(items) for _ in range(random.randint(0, 2))]\n",
+    "    return [\n",
+    "        Email(\n",
+    "            id=str(i),\n",
+    "            sender=\"some_user@example.mail\",\n",
+    "            subject=item[\"subject\"],\n",
+    "            body=item[\"body\"],\n",
+    "        )\n",
+    "        for i, item in enumerate(chosen_items)\n",
+    "    ]\n",
+    "\n",
     "\n",
     "class EmailAgent:\n",
     "    def __init__(self):\n",
-    "        self.llm = ChatOpenAI(model=\"gpt-3.5-turbo\") # Replace with your LLM you want\n",
+    "        self.llm = ChatOpenAI(model=\"gpt-3.5-turbo\")  # Replace with your LLM you want\n",
     "\n",
     "    def fetch_unread_emails(self) -> List[Email]:\n",
-    "      \"\"\"\n",
-    "      Replace this with your Email LOGIC\n",
-    "      \"\"\"\n",
-    "      return create_dummy_random_emails()\n",
+    "        \"\"\"\n",
+    "        Replace this with your Email LOGIC\n",
+    "        \"\"\"\n",
+    "        return create_dummy_random_emails()\n",
     "\n",
-    "    def lookup_policy(self, subject: str, body:str) -> str:\n",
+    "    def lookup_policy(self, subject: str, body: str) -> str:\n",
     "        \"\"\"Always Consult the company policies to answer the queries.\n",
     "        Use this for drafting the emails\"\"\"\n",
-    "        prompt = PromptTemplate(template=\"Identify whether the given email is policy related or not. Identify if the email requires info which might be in the policy documents.\\n\\nSubject: {subject}\\n\\nBody:\\n{body}\\n\\n. Do not output any reasoning etc. Strictly reply with Yes/No\", input_variables=[\"email\"])\n",
+    "        prompt = PromptTemplate(\n",
+    "            template=\"Identify whether the given email is policy related or not. Identify if the email requires info which might be in the policy documents.\\n\\nSubject: {subject}\\n\\nBody:\\n{body}\\n\\n. Do not output any reasoning etc. Strictly reply with Yes/No\",\n",
+    "            input_variables=[\"email\"],\n",
+    "        )\n",
     "        chain = prompt | self.llm\n",
     "        response = chain.invoke({\"subject\": subject, \"body\": body})\n",
     "        policy_related = response.content.strip().lower() == \"yes\"\n",
     "        if policy_related:\n",
-    "          docs = retriever.query(f\"Email Subject: {subject}\\n\\nEmail Body:\\n{body}\", k=2)\n",
-    "          return \"\\nPolicy Context:\" + \"\\n\\n\".join([doc[\"page_content\"] for doc in docs])\n",
+    "            docs = retriever.query(\n",
+    "                f\"Email Subject: {subject}\\n\\nEmail Body:\\n{body}\", k=2\n",
+    "            )\n",
+    "            return \"\\nPolicy Context:\" + \"\\n\\n\".join(\n",
+    "                [doc[\"page_content\"] for doc in docs]\n",
+    "            )\n",
     "        return \"\"\n",
     "\n",
-    "    def draft_email(self, email_subject:str, email_body: str, email_context:str = \"\") -> str:\n",
+    "    def draft_email(\n",
+    "        self, email_subject: str, email_body: str, email_context: str = \"\"\n",
+    "    ) -> str:\n",
     "        if not email_context:\n",
-    "          prompt = PromptTemplate(template=\"You are a specialised chat agent named Saleem Shady' working for SWISS Airline. Write a well professional response to this user email:\\n\\nEmail Subject: {email_subject}\\n\\nEmail Body:\\n{email_body}\\n\\nReply with a perfect response, nothing else\\nResponse:\", input_variables=[\"email\"])\n",
+    "            prompt = PromptTemplate(\n",
+    "                template=\"You are a specialised chat agent named Saleem Shady' working for SWISS Airline. Write a well professional response to this user email:\\n\\nEmail Subject: {email_subject}\\n\\nEmail Body:\\n{email_body}\\n\\nReply with a perfect response, nothing else\\nResponse:\",\n",
+    "                input_variables=[\"email\"],\n",
+    "            )\n",
     "        else:\n",
-    "          prompt = PromptTemplate(template=\"You are a specialised chat agent named Saleem Shady' working for SWISS Airline. Write a well professional response to this user email given the Context (which may or may not be required in answering)\\n\\n{email_context}\\n\\nEmail Subject: {email_subject}\\n\\nEmail Body:\\n{email_body}\\n\\nReply with a perfect response, nothing else\\nResponse:\", input_variables=[\"email\"])\n",
+    "            prompt = PromptTemplate(\n",
+    "                template=\"You are a specialised chat agent named Saleem Shady' working for SWISS Airline. Write a well professional response to this user email given the Context (which may or may not be required in answering)\\n\\n{email_context}\\n\\nEmail Subject: {email_subject}\\n\\nEmail Body:\\n{email_body}\\n\\nReply with a perfect response, nothing else\\nResponse:\",\n",
+    "                input_variables=[\"email\"],\n",
+    "            )\n",
     "\n",
     "        chain = prompt | self.llm\n",
-    "        response = chain.invoke({\"email_subject\":email_subject,\"email_body\": email_body, \"email_context\": email_context})\n",
+    "        response = chain.invoke(\n",
+    "            {\n",
+    "                \"email_subject\": email_subject,\n",
+    "                \"email_body\": email_body,\n",
+    "                \"email_context\": email_context,\n",
+    "            }\n",
+    "        )\n",
     "        return response.content\n",
     "\n",
-    "\n",
     "    def validate_draft(self, initial_email: str, draft_email: str) -> bool:\n",
-    "        prompt = PromptTemplate(template=\"You are a Email Proofreader. Review this response:\\n\\nOriginal Email:\\n{initial_email}\\n\\nDraft Response:\\n{draft_email}\\n\\nIs this mail ready to send? Do not give your reasoning or views. Reply only with (Yes/No):\", input_variables=[\"initial_email\", \"draft_email\"])\n",
+    "        prompt = PromptTemplate(\n",
+    "            template=\"You are a Email Proofreader. Review this response:\\n\\nOriginal Email:\\n{initial_email}\\n\\nDraft Response:\\n{draft_email}\\n\\nIs this mail ready to send? Do not give your reasoning or views. Reply only with (Yes/No):\",\n",
+    "            input_variables=[\"initial_email\", \"draft_email\"],\n",
+    "        )\n",
     "        chain = prompt | self.llm\n",
-    "        response = chain.invoke({\"initial_email\": initial_email, \"draft_email\": draft_email})\n",
+    "        response = chain.invoke(\n",
+    "            {\"initial_email\": initial_email, \"draft_email\": draft_email}\n",
+    "        )\n",
     "        return response.content.strip().lower() == \"yes\"\n",
     "\n",
     "\n",
@@ -438,16 +495,22 @@
     "        return state\n",
     "\n",
     "    def process_next_email(state: EmailState) -> EmailState:\n",
-    "      if state.emails:\n",
-    "          state.current_email = state.emails.pop(0)\n",
-    "          state.policy_context = agent.lookup_policy(state.current_email.subject, state.current_email.body)\n",
-    "      else:\n",
-    "          state.exit = True\n",
-    "      return state\n",
+    "        if state.emails:\n",
+    "            state.current_email = state.emails.pop(0)\n",
+    "            state.policy_context = agent.lookup_policy(\n",
+    "                state.current_email.subject, state.current_email.body\n",
+    "            )\n",
+    "        else:\n",
+    "            state.exit = True\n",
+    "        return state\n",
     "\n",
     "    def draft_email(state: EmailState) -> EmailState:\n",
     "        if state.current_email:\n",
-    "            state.draft = agent.draft_email(state.current_email.subject, state.current_email.body, state.policy_context)\n",
+    "            state.draft = agent.draft_email(\n",
+    "                state.current_email.subject,\n",
+    "                state.current_email.body,\n",
+    "                state.policy_context,\n",
+    "            )\n",
     "            state.trials += 1\n",
     "        return state\n",
     "\n",
@@ -463,7 +526,9 @@
     "        elif state.trials >= state.allowed_trials:\n",
     "            state.current_email.status = \"failed\"\n",
     "            state.current_email.failure_reason = \"Failed after 3 attempts\"\n",
-    "            print(\"\\n\\n*********************** Draft Failed after Max Tries ******************** \\n\\n\")\n",
+    "            print(\n",
+    "                \"\\n\\n*********************** Draft Failed after Max Tries ******************** \\n\\n\"\n",
+    "            )\n",
     "            return \"stop\"\n",
     "        else:\n",
     "            return \"rewrite\"\n",
@@ -493,26 +558,32 @@
     "\n",
     "    workflow.add_conditional_edges(\n",
     "        \"process_next_email\",\n",
-    "        lambda state: END if state.exit else \"draft_email\" ,\n",
-    "        {\"draft_email\": \"draft_email\", END: END}\n",
-    "        )\n",
+    "        lambda state: END if state.exit else \"draft_email\",\n",
+    "        {\"draft_email\": \"draft_email\", END: END},\n",
+    "    )\n",
     "\n",
     "    workflow.add_edge(\"draft_email\", \"validate_draft\")\n",
     "\n",
     "    workflow.add_conditional_edges(\n",
     "        \"validate_draft\",\n",
     "        decide_next_step,\n",
-    "        {\"send\": \"send_or_skip_email\", \"rewrite\": \"draft_email\", \"stop\": \"send_or_skip_email\"}\n",
+    "        {\n",
+    "            \"send\": \"send_or_skip_email\",\n",
+    "            \"rewrite\": \"draft_email\",\n",
+    "            \"stop\": \"send_or_skip_email\",\n",
+    "        },\n",
     "    )\n",
     "\n",
     "    workflow.add_edge(\"send_or_skip_email\", \"process_next_email\")\n",
     "\n",
     "    return workflow.compile()\n",
     "\n",
+    "\n",
     "compiled_email_subgraph = create_workflow()\n",
     "initial_state = EmailState()\n",
     "\n",
     "from IPython.display import Image, display\n",
+    "\n",
     "try:\n",
     "    display(Image(compiled_email_subgraph.get_graph(xray=True).draw_mermaid_png()))\n",
     "except Exception:\n",
