added langchain  pacage

--- a/examples/Multi-source-Agent/Multi_kb_RAG_Agent.ipynb
+++ b/examples/Multi-source-Agent/Multi_kb_RAG_Agent.ipynb
@@ -26,7 +26,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install -U langgraph langchain-openai\n",
+        "!pip install -U langgraph langchain langchain-openai\n",
         "!pip install langgraph-supervisor\n",
         "!pip install pypdf\n",
         "!pip install lancedb"
