--- a/examples/Multi-source-Agent/Multi_kb_RAG_Agent.ipynb
+++ b/examples/Multi-source-Agent/Multi_kb_RAG_Agent.ipynb
@@ -27,7 +27,7 @@
       "cell_type": "code",
       "source": [
         "!pip install -U langgraph langchain langchain-openai\n",
-        "!pip install langgraph-supervisor\n",
+        "!pip install langgraph-supervisor langchain_community \n",
         "!pip install pypdf\n",
         "!pip install lancedb"
       ],
